[gd_scene load_steps=8 format=3 uid="uid://bwkytn46g5yt3"]

[ext_resource type="Theme" uid="uid://4xcdimhfc2hy" path="res://default_theme_tools.tres" id="1_7ylft"]
[ext_resource type="Script" uid="uid://bm0wuxmf4rhe" path="res://tools/youtube_dl_downloader_ui/YoutubeDLDownloaderUI.gd" id="1_tmh5l"]
[ext_resource type="Texture2D" uid="uid://dku88ebe3yjq0" path="res://graphics/icons/download.svg" id="2_1xsl0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tmh5l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1xsl0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7ylft"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7ylft"]
bg_color = Color(0, 0, 0, 1)

[node name="YoutubeDlDownloaderUi" type="PanelContainer"]
offset_right = 1112.0
offset_bottom = 966.0
theme = ExtResource("1_7ylft")
script = ExtResource("1_tmh5l")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="URLLineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Video URL"

[node name="DownloadCombinedButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Download video + audio"
icon = ExtResource("2_1xsl0")

[node name="DownloadAudioButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Download audio"
icon = ExtResource("2_1xsl0")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="UseConfiguredCommandLineArgumentsCheckbox" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Use custom command line arguments (from options)"

[node name="Label" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxEmpty_tmh5l")
theme_override_styles/background = SubResource("StyleBoxEmpty_1xsl0")
theme_override_styles/normal = SubResource("StyleBoxEmpty_7ylft")
bbcode_enabled = true
text = "[color=yellow]NOTE:[/color] Saved extension may be different"
fit_content = true

[node name="ConsoleText" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_7ylft")
scroll_following = true

[node name="SaveCombinedFileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
access = 2
filters = PackedStringArray("*.mp4;MP4 File")

[node name="SaveAudioFileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
auto_translate_mode = 1
access = 2
filters = PackedStringArray("*.ogg;OGG File")

[node name="SuccessDialog" type="AcceptDialog" parent="."]
unique_name_in_owner = true
title = ""
dialog_text = "Saved media succesfully!
You should now be able to import the resulting file!"
